--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,3 +29,10 @@ jobs:
       run: |
         pip install pytest
         pytest
+    - name: Run Databricks Job
+      run: |
+        databricks jobs run-now --json-file path/to/your/databricks-job-definition.json
+      env:
+        DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+        DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+
