--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Install Databricks CLI
       run: |
         pip install databricks-cli
+        databricks jobs configure --version=2.1
       env:
         DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
         DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
